# opengl_android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/aisaka/opengldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/aisaka/opengldemo/: MainActivity.kt  MyGlSurfaceView.kt  MyRender.kt
app/src/main/jni/: BaseRender.cc  BaseRender.h  ImageData.cc  ImageData.h  ImageTextureRender.cc  ImageTextureRender.h  JniHandle.cc  Log.h  ShaderCreator.cc  ShaderCreator.h  TriangleRender.cc  TriangleRender.h  VAO_VBO_EBO_TriangleSample.cc  VAO_VBO_EBO_TriangleSample.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/aisaka/opengldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
